--- a/MLcourse/logistic-regression.html
+++ b/MLcourse/logistic-regression.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-09-14">
+<meta name="date" content="2018-09-25">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -228,6 +228,10 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>If <span class="math inline">\(c\)</span> is a category (<span class="math inline">\(c \in \mathcal{C}\)</span>), by the probability that <span class="math inline">\(X\)</span> belongs to <span class="math inline">\(c\)</span> we mean <span class="math inline">\(p(X \in c) = \mathbb{P}(Y=c|X)\)</span>.</p>
 </blockquote>
 <p>In the binomial or binary logistic regression, the outcome can have only two possible types of values (e.g. “Yes” or “No”, “Success” or “Failure”). Multinomial logistic refers to cases where the outcome can have three or more possible types of values (e.g., “good” vs. “very good” vs. “best”). Generally outcome is coded as “0” and “1” in binary logistic regression.</p>
+<center>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/SF_jZLUQndY" frameborder="0" allowfullscreen>
+</iframe>
+</center>
 </div>
 <div id="logistic-regression-1" class="section level2">
 <h2><span class="header-section-number">3.2</span> Logistic Regression</h2>
@@ -294,6 +298,10 @@ The left-hand side is called the <em>log-odds</em> or <em>logit</em>. We see tha
 </div>
 <div id="estimating-the-regression-coefficients-1" class="section level3">
 <h3><span class="header-section-number">3.2.2</span> Estimating the Regression Coefficients</h3>
+<center>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/0dhcIQ6bX8c" frameborder="0" allowfullscreen>
+</iframe>
+</center>
 <p>We estimate <span class="math inline">\(\beta_0\)</span> and <span class="math inline">\(\beta_1\)</span> using the <em>Maximum Likelihood Estimation</em> method (MLE). The basic intuition behind using maximum likelihood to fit a logistic regression model is as follows: we seek estimates for <span class="math inline">\(\beta_0\)</span> and <span class="math inline">\(\beta_1\)</span> such that the predicted probability <span class="math inline">\(\hat{p}(x_i)\)</span> of the response for each individual, corresponds as closely as possible to the individual’s observed response status (recall that the response <span class="math inline">\(Y\)</span> is categorical). The <em>likelihood function</em> is</p>
 <p><span class="math display">\[ l(\beta_0,\beta_1) = \prod_{i=1}^n p(x_i)^{Y_i}(1-p(x_i))^{1-Y_i}. \]</span></p>
 <p>This likelihood is <strong>the probability of the data based on the model</strong>. It gives the probability of the observed zeros and ones in the data. The estimates <span class="math inline">\(\hat{\beta_0}\)</span> and <span class="math inline">\(\hat{\beta_1}\)</span> are chosen to <em>maximize</em> this likelihood function. The interpretation of the likelihood function is the following:</p>
@@ -314,6 +322,10 @@ In the linear regression setting, the least squares approach is a special case o
 </div>
 <div id="prediction-1" class="section level3">
 <h3><span class="header-section-number">3.2.3</span> Prediction</h3>
+<center>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/CBPZNizyiqA" frameborder="0" allowfullscreen>
+</iframe>
+</center>
 <p><strong>Example</strong></p>
 <table>
 <thead>
@@ -361,6 +373,10 @@ In the linear regression setting, the least squares approach is a special case o
 <p>where <span class="math inline">\(X=(X_1,\ldots,X_p)\)</span> are <span class="math inline">\(p\)</span> predictors. The equation above can be rewritten as</p>
 <p><span class="math display">\[ p(X) = \frac{e^{\beta_0 + \beta_1 X_1 +  \ldots + \beta_p X_p}}{1+e^{\beta_0 + \beta_1 X_1 +  \ldots + \beta_p X_p}} \]</span></p>
 <p>Just as in the simple logistic regression we use the maximum likelihood method to estimate <span class="math inline">\(\beta_0,\beta_1,\ldots,\beta_p\)</span>.</p>
+<center>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/4DzxXEL-Vk4" frameborder="0" allowfullscreen>
+</iframe>
+</center>
 </div>
 <div id="logreg-examps" class="section level2">
 <h2><span class="header-section-number">3.4</span> Example</h2>
