--- a/MLcourse/multiple-linear-regression.html
+++ b/MLcourse/multiple-linear-regression.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-09-14">
+<meta name="date" content="2018-09-25">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -356,7 +356,7 @@ Too many features (e.g. <span class="math inline"><span class="math inline">\(p 
 <tr class="odd">
 <td>Total</td>
 <td><span class="math inline">\(n-1\)</span></td>
-<td>SST=TSS</td>
+<td>TSS=SST</td>
 <td></td>
 <td></td>
 <td></td>
